<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Iw6-HS-OkT">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="Y32-IO-cgd">
            <objects>
                <viewController id="Iw6-HS-OkT" customClass="LoginViewController" customModule="InstagramClone" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="LK3-nV-aJ6"/>
                        <viewControllerLayoutGuide type="bottom" id="LLj-gE-zOu"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Ho9-Qf-886">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to Instagram!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tz8-EE-0SW">
                                <rect key="frame" x="166" y="92" width="269" height="33"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Use the form below to sign up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jPY-Xn-r0H">
                                <rect key="frame" x="203" y="133" width="194" height="17"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="toH-fD-6hx">
                                <rect key="frame" x="20" y="171" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S7d-XV-7HH">
                                <rect key="frame" x="20" y="226" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pjD-R2-Yqr">
                                <rect key="frame" x="268" y="279" width="64" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Sign Up"/>
                                <connections>
                                    <action selector="signUp:" destination="Iw6-HS-OkT" eventType="touchUpInside" id="AOT-kL-7uL"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="LwT-Yg-gyE">
                                <rect key="frame" x="197" y="309" width="207" height="34"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Already registered?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fcv-6Q-A50">
                                        <rect key="frame" x="0.0" y="0.0" width="149" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rWX-GI-kLX">
                                        <rect key="frame" x="157" y="0.0" width="50" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="Log In"/>
                                        <connections>
                                            <action selector="logIn:" destination="Iw6-HS-OkT" eventType="touchUpInside" id="sQo-TG-EOA"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="pjD-R2-Yqr" firstAttribute="centerX" secondItem="S7d-XV-7HH" secondAttribute="centerX" id="0iw-W4-Vcq"/>
                            <constraint firstItem="S7d-XV-7HH" firstAttribute="width" secondItem="toH-fD-6hx" secondAttribute="width" id="7R0-ry-Ws3"/>
                            <constraint firstItem="LwT-Yg-gyE" firstAttribute="top" secondItem="pjD-R2-Yqr" secondAttribute="bottom" constant="-4" id="Cvb-PS-qel"/>
                            <constraint firstItem="LwT-Yg-gyE" firstAttribute="centerX" secondItem="Ho9-Qf-886" secondAttribute="centerX" id="GZi-9q-Ggk"/>
                            <constraint firstItem="S7d-XV-7HH" firstAttribute="top" secondItem="toH-fD-6hx" secondAttribute="bottom" constant="25" id="OAd-JR-DNK"/>
                            <constraint firstItem="jPY-Xn-r0H" firstAttribute="top" secondItem="Tz8-EE-0SW" secondAttribute="bottom" constant="8" id="Qn5-2H-Z1D"/>
                            <constraint firstAttribute="leadingMargin" secondItem="toH-fD-6hx" secondAttribute="leading" id="ULb-hJ-mf8"/>
                            <constraint firstItem="toH-fD-6hx" firstAttribute="top" secondItem="jPY-Xn-r0H" secondAttribute="bottom" constant="21" id="hTM-Td-vKr"/>
                            <constraint firstItem="jPY-Xn-r0H" firstAttribute="centerX" secondItem="Tz8-EE-0SW" secondAttribute="centerX" id="hgj-zW-QGh"/>
                            <constraint firstItem="S7d-XV-7HH" firstAttribute="centerX" secondItem="toH-fD-6hx" secondAttribute="centerX" id="ld8-YL-hyo"/>
                            <constraint firstItem="toH-fD-6hx" firstAttribute="centerX" secondItem="jPY-Xn-r0H" secondAttribute="centerX" id="noW-As-p8l"/>
                            <constraint firstItem="pjD-R2-Yqr" firstAttribute="top" secondItem="S7d-XV-7HH" secondAttribute="bottom" constant="23" id="oXl-LE-5QY"/>
                            <constraint firstItem="Tz8-EE-0SW" firstAttribute="centerX" secondItem="Ho9-Qf-886" secondAttribute="centerX" id="p4S-Dz-rDZ"/>
                            <constraint firstItem="Tz8-EE-0SW" firstAttribute="top" secondItem="LK3-nV-aJ6" secondAttribute="bottom" constant="28" id="yYy-xT-2px"/>
                            <constraint firstAttribute="trailingMargin" secondItem="toH-fD-6hx" secondAttribute="trailing" id="zja-ot-Nha"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="ELj-vw-VR0"/>
                    <connections>
                        <outlet property="passwordTextField" destination="S7d-XV-7HH" id="XCC-Pd-cs6"/>
                        <outlet property="usernameTextField" destination="toH-fD-6hx" id="JB6-BT-9B6"/>
                        <segue destination="zMV-vS-IAD" kind="show" identifier="viewUsersSegue" id="t8f-Dw-P1B"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="GE0-JI-jJc" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1127" y="435"/>
        </scene>
        <!--View Users Table View Controller-->
        <scene sceneID="Xej-HJ-erf">
            <objects>
                <tableViewController id="rlX-Ec-gjp" customClass="ViewUsersTableViewController" customModule="InstagramClone" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="aJm-nE-Vdf">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCell" id="9xt-rb-hbh">
                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9xt-rb-hbh" id="3eG-qp-FXW">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="rlX-Ec-gjp" id="XHi-FT-Bsd"/>
                            <outlet property="delegate" destination="rlX-Ec-gjp" id="Bkn-H2-AzE"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="Gk6-vK-sHN"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xtB-28-MOu" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2618" y="435"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="ehQ-Nn-XVc">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zMV-vS-IAD" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NRo-CU-Wbx">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="rlX-Ec-gjp" kind="relationship" relationship="rootViewController" id="3Ar-h2-wE0"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="j0v-eJ-5mk" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1887" y="435"/>
        </scene>
    </scenes>
</document>
