//
//  InstagramCloneUITests.swift
//  InstagramCloneUITests
//
//  Created by Michael Williams on 7/19/16.
//  Copyright © 2016 Michael D. Williams. All rights reserved.
//

import XCTest

class InstagramCloneUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        
        let app = XCUIApplication()
        app.textFields["username"].tap()
        app.textFields["unclonghorn@gmail.com"]
        
        let passwordTextField = app.textFields["password"]
//        passwordTextField.tap()
        passwordTextField.tap()
        app.textFields["t@rh33l87"]
        app.buttons["Log In"].tap()
        
    
    }
    
}
